# ONNXim

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  conanfile.txt  env.yaml  models_list.json
.github/workflows/: docker-image.yml
configs/: systolic_os_128x128_c4.json  systolic_os_256x256_c1.json  systolic_os_32x32_c1_simple_noc.json  systolic_os_32x32_c64.json  systolic_os_32x32_c64_9x8_mesh.json  systolic_os_32x32_c64_ChRaBaRoCo.json  systolic_os_32x32_c64_FCFS.json  systolic_os_32x32_c64_FRFCFS.json  systolic_os_32x32_c64_FRFCFS_Cap.json  systolic_os_32x32_c64_FRFCFS_PriorHit.json  systolic_os_32x32_c64_RoBaRaCoCh.json  systolic_os_32x32_c64_RoCoBaRaCh.json  systolic_os_32x32_c64_sif_mesh_age.json  systolic_os_32x32_c64_sif_mesh_rr.json  systolic_os_32x32_c64_sif_xbar_age.json  systolic_os_32x32_c64_sif_xbar_rr.json  systolic_os_32x32_c64_simple.json  systolic_os_32x32_c64_simple_noc.json  systolic_os_32x32_c64_split.json  systolic_os_32x32_c64_time.json  systolic_os_64x64_c16.json  systolic_os_c1.json  systolic_os_c2.json  systolic_ws_128x128_c1_booksim2_transformer.json  systolic_ws_128x128_c1_simple_noc_dram_transformer.json  systolic_ws_128x128_c1_simple_noc_transformer.json  systolic_ws_128x128_c4_booksim2_tpuv4.json  systolic_ws_128x128_c4_simple_noc_dram_tpuv4.json  systolic_ws_128x128_c4_simple_noc_tpuv4.json  systolic_ws_128x128_c4_simple_noc_tpuv4_half_ramulator2.json  systolic_ws_128x128_c4_simple_noc_tpuv4_partition_full.json  systolic_ws_128x128_c4_simple_noc_tpuv4_partition_half.json  systolic_ws_128x128_c4_simple_noc_tpuv4_partition_quad.json  systolic_ws_128x128_c4_simple_noc_tpuv4_ramulator2.json  systolic_ws_32x32_c1_simple_noc.json  systolic_ws_8x8_c1_booksim2_transformer.json  systolic_ws_8x8_c1_simple_noc.json  systolic_ws_8x8_c1_simple_noc_transformer.json  systolic_ws_8x8_c4_booksim2_transformer.json  systolic_ws_8x8_c4_simple_noc_dram_transformer.json  (+2 more)
configs/booksim2_configs/: anynet.icnt  anynet_file  fly_c16_m8.icnt  fly_c1_m2.icnt  fly_c1_m8.icnt  fly_c2_m8.icnt  fly_c4_m16.icnt  fly_c4_m2.icnt  fly_c4_m32.icnt  fly_c4_m8.icnt  fly_c64_m8.icnt  fly_c64_m8_sif-age.icnt  fly_c64_m8_sif-rr.icnt  make_anynet_topology.py  mesh_sif-age.icnt  mesh_sif-rr.icnt
configs/ramulator2_configs/: DDR4.yaml  HBM2.yaml
configs/ramulator_configs/: DDR4-config.cfg  HBM-config.cfg  HBM-config_ChRaBaRoCo.cfg  HBM-config_FCFS.cfg  HBM-config_FRFCFS.cfg  HBM-config_FRFCFS_Cap.cfg  HBM-config_FRFCFS_PriorHit.cfg  HBM-config_RoCoBaRaCh.cfg  HBMx0.5ch-config.cfg  HBMx2ch-config.cfg
example/: language_models.json  resnet18_infr.json
model_lists/: bert.json  gpt2.json  gpt2_gen.json  resnet50.json  vgg16.json
models/: tile_graph_0.onnx
models/language_models/: llama3-8b.json  opt-125m.json  opt-66b.json
models/resnet18/: resnet18.mapping
results/: improvement.txt
scripts/: aggregate_results.sh  build.sh  conv_generate.py  generate_cnn_onnx.py  generate_cnn_trace.py  generate_conv_onnx.py  generate_matmul_onnx.py  generate_multi-tenancy_onnx.py  generate_multi-tenancy_onnx2.py  generate_transformer_onnx.py  matmul_conv.sh  matmul_generate.py  onnx_file_generate.py  onnx_transformer_generate.py  onnxim_sbatch.sh  run_docker_template.sh  run_matmul_conv.sh  run_multi-tenancy.sh  run_sbatch.sh  run_sbatch_docker.sh  run_simulation.sh  run_timeloop.sh  run_transformer.sh  test_onnx_generate.py  timeloop_slurm_job.sh
src/: CMakeLists.txt  Common.cc  Common.h  Core.cc  Core.h  Dram.cc  Dram.h  Hashing.cc  Hashing.h  Instruction.h  Interconnect.cc  Interconnect.h  Mapping.cc  Mapping.h  Model.cc  Model.h  SimulationConfig.h  Simulator.cc  Simulator.h  Sram.cc  Sram.h  Stat.h  SystolicOS.cc  SystolicOS.h  SystolicWS.cc  SystolicWS.h  Tensor.cc  Tensor.h  TileGraph.cc  TileGraph.h  main.cc
src/allocator/: AddressAllocator.h
src/helper/: CommandLineParser.cc  CommandLineParser.h  HelperFunctions.h
src/models/: LanguageModel.cc  LanguageModel.h
src/operations/: AdaptiveAvgPool.cc  AdaptiveAvgPool.h  Attention.cc  Attention.h  BiasAct.cc  BiasAct.h  BiasGelu.cc  BiasGelu.h  Cast.cc  Cast.h  Concat.cc  Concat.h  Conv.cc  Conv.h  ConvOS.cc  ConvOS.h  ConvWS.cc  ConvWS.h  Dummy.cc  Dummy.h  EmbedLayerNorm.cc  EmbedLayerNorm.h  Flatten.cc  Flatten.h  Gemm.cc  (+19 more)
tests/: CMakeLists.txt  MappingTest.cc  SystolicOsTest.cc  SystolicWsTest.cc  main.cc
tests/operatons/: ConvWSTest.cc  GemmWSTest.cc
traces/: input.csv  resnet18.csv
(+16 files in other folders)
